fixed icon-visiblity

--- a/new-website/style.css
+++ b/new-website/style.css
@@ -1124,7 +1124,9 @@ body{
   color: white;
   background-color: black;
 }
-
+.dark .footer-icons a svg path{
+  fill: white;
+}
 .dark .footer-description,
 .dark .footer-links a,
 .dark .footer-links a::before{
